--- a/templates/home_application/home.html
+++ b/templates/home_application/home.html
@@ -1,25 +1,177 @@
 <%inherit file="/base.html"/>
+<!-- 若您需要使用Kendo UI Professional，请联系版权人获得合法的授权或许可。 -->
+<!-- Bootstrap css -->
+<link href="https://magicbox.bk.tencent.com/static_api/v3/assets/bootstrap-3.3.4/css/bootstrap.min.css"
+      rel="stylesheet">
+<!-- kendo ui css -->
+<link href="https://magicbox.bk.tencent.com/static_api/v3/assets/kendoui-2015.2.624/styles/kendo.common.min.css"
+      rel="stylesheet">
+<link href="https://magicbox.bk.tencent.com/static_api/v3/assets/kendoui-2015.2.624/styles/kendo.default.min.css"
+      rel="stylesheet">
+<!-- font-awesome -->
+<link href="https://magicbox.bk.tencent.com/static_api/v3/assets/fontawesome/css/font-awesome.css" rel="stylesheet">
+<!--蓝鲸提供的公用样式库 -->
+<link href="https://magicbox.bk.tencent.com/static_api/v3/bk/css/bk.css" rel="stylesheet">
+<link href="https://magicbox.bk.tencent.com/static_api/v3/bk/css/bk_pack.css" rel="stylesheet">
+<!-- 如果要使用Bootstrap的js插件，必须先调入jQuery -->
+<script src="https://magicbox.bk.tencent.com/static_api/v3/assets/js/jquery-1.10.2.min.js"></script>
+<!-- 包括所有bootstrap的js插件或者可以根据需要使用的js插件调用　-->
+<script src="https://magicbox.bk.tencent.com/static_api/v3/assets/echarts-2.0/echarts-all.js"></script>
+<script src="https://magicbox.bk.tencent.com/static_api/v3/assets/bootstrap-3.3.4/js/bootstrap.min.js"></script>
+<!-- 包括所有kendoui的js插件或者可以根据需要使用的js插件调用　-->
+<script src="https://magicbox.bk.tencent.com/static_api/v3/assets/kendoui-2015.2.624/js/kendo.all.min.js"></script>
+<script src="https://magicbox.bk.tencent.com/static_api/v3/assets/echarts-2.0/echarts-all.js"></script>
+<script src="https://magicbox.bk.tencent.com/static_api/v3/bk/js/bk.js"></script>
+<!-- 数据埋点统计 -->
+<script src="http://magicbox.bk.tencent.com/static_api/analysis.js"></script>
+<!-- 以下两个插件用于在IE8以及以下版本浏览器支持HTML5元素和媒体查询，如果不需要用可以移除 -->
+<!--[if lt IE 9]><script src="https://magicbox.bk.tencent.com/static_api/v3/assets/js/html5shiv.min.js"></script><script src="https://magicbox.bk.tencent.com/static_api/v3/assets/js/respond.min.js"></script><![endif]-->
+
 
 <%block name="content">
-    <div class="home-page">
-    	<div class="page-arrow">
-			<div class="container">
-				<!-- 蓝鲸智云开发框架说明  Start -->
-				<div class="tc title-word">
-					<p>欢迎使用蓝鲸智云集成平台</p>
-				</div>
-				<div class="tc title-word-second">
-					<p>蓝鲸智云开发框架<small class="pl10">助力你的自动化</small></p>
-				</div>
-				<hr class="cutting-line">
-				<div class="tc frame-explain-text">
-					<p>您现在打开的应用是由蓝鲸智云示例代码生成的，该示例代码称为“APP开发框架”。</p>
-					<p>蓝鲸智云集成平台（PaaS）提供了完善的前后台开发框架、调度引擎、公共组件等模块，帮助业务的产品和技术人员快速构建低成本、免运维的支撑工具和运营系统。</p>
-					<p>若想体验快速开发应用的功能，请前往<a class="developer-center" href="${BK_PAAS_HOST}" target="_blank">“开发者中心”</a>。</p>
-				</div>
-				<!-- 蓝鲸智云开发框架说明  End -->
-			</div>
-		</div>
+<div class="king-page-box">
+    <div class="king-container clearfix">
+        <div class="form-group clearfix ">
+            <label class="col-sm-3 control-label bk-lh30 pt0">请选择业务：</label>
+            <div class="col-sm-9">
+                <select name="" id="select_app" class="form-control bk-valign-top">
+                </select>
+            </div>
+        </div>
+        <div class="form-group has-feedback clearfix ">
+            <label class="control-label col-sm-3 pt0" for="introduction">请输入主机IP：</label>
+            <div class="col-sm-9">
+                <textarea id="ip_list_filter" class="form-control" rows="4" placeholder="提示信息"></textarea>
+            </div>
+        </div>
+        <div class="form-group clearfix">
+            <div class="col-sm-9 col-sm-offset-3">
+                <button type="button" id="btn_search" class="king-btn mr10  king-success">查询</button>
+            </div>
+        </div>
+        <table class="table mb0 pr15 ranger-box2  ">
+            <thead>
+            <tr>
+                <th style="width: 15%;">内网IP</th>
+                <th style="width: 15%;">系统名</th>
+                <th style="width: 15%;">主机名</th>
+                <th style="width: 15%;">云区域</th>
+                <th style="">Mem(%)</th>
+                <th style="">Disk(%)</th>
+                <th style="">CPU(%)</th>
+                <th style="width: 15%;">操作</th>
+            </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+        <template id="header_tpl_15436287986472">
+            <tr>
+                <th style="width: 15%;">#ip#</th>
+                <th style="width: 15%;">#system_name#</th>
+                <th style="width: 15%;">#host_name#</th>
+                <th style="width: 15%;">#cloud_name#</th>
+                <th style="">#mem#</th>
+                <th style="">#disk#</th>
+                <th style="">#cpu#</th>
+                <th style="width: 15%;">操作</th>
+            </tr>
+        </template>
+        <template id="tpl_15436287986472">
+            <tr>
+                <td style="width: 15%;">#ip#</td>
+                <td style="width: 15%;">#system_name#</td>
+                <td style="width: 15%;">#host_name#</td>
+                <td style="width: 15%;">#cloud_name#</td>
+                <td class="mem">#mem#</td>
+                <td class="disk">#disk#</td>
+                <td class="cpu">#cpu#</td>
+                <td>
+                    <button biz_id="#biz_id#" ip="#ip#" class="btn btn-xs btn-success btn_check">查看</button>
+                    <button class="btn btn-xs btn-warning btn_add">添加到周期</button>
+                </td>
+            </tr>
+        </template>
+        <!-- 设置面板End -->
     </div>
+</div>
+<script>
+    $(function () {
+        function renderTpl(str, cfg) {
+            var re = /(#(.+?)#)/g;
+
+            return str.replace(re, function () {
+                var val = cfg[arguments[2]] + '';
+                if (typeof val == 'undefined') {
+                    val = '';
+                }
+                return val;
+            });
+        }
+
+        $("#btn_search").click(function () {
+            var app_id = $("#select_app").find("option:selected").val();
+            var ip_list_f = $("#ip_list_filter").val();
+
+            $.post("${SITE_URL}api/search_host/?business_id=" + app_id, ip_list_f, function (res) {
+                if (res.result) {
+                    var _html = ' ';
+                    var list = res.data.items;
+                    var tpl = $('#tpl_15436287986472').html();
+                    var headerTpl = $('#header_tpl_15436287986472').html();
+                    for (var i = 0, len = list.length; i < len; i++) {
+                        var item = list[i];
+                        _html += renderTpl(tpl, item)
+                        var _html_$ = $(_html);
+                        _html_$.find(".btn_check").click(function (res) {
+                            var btn_ref = $(this);
+                            var check_ip = $(this).attr("ip");
+                            var biz_id = $(this).attr("biz_id");
+                            $.get("${SITE_URL}api/get_host_mdc/?business_id=" + biz_id + "&ip=" + check_ip, function (res) {
+                                if (res.result) {
+                                    btn_ref.parent().parent().find(".mem").text(res.data.mem);
+                                    btn_ref.parent().parent().find(".cpu").text(res.data.cpu);
+                                    btn_ref.parent().parent().find(".disk").text(res.data.disk);
+                                }
+                                else {
+                                    alert(res.message);
+                                }
+                            })
+
+                        });
+                    }
+                    $('.ranger-box2 tbody').html(_html_$);
+                    $('.ranger-box2 thead').html(renderTpl(headerTpl, res.data.catalogues));
+                } else {
+                    alert(res.message);
+                }
+            })
+
+        })
+
+        var search_business = function () {
+            $.get("${SITE_URL}api/search_business/", function (res) {
+                if (res.result) {
+                    res.data.info.forEach(function (item) {
+                        $("#select_app").append('<option value="' + item.bk_biz_id + '">' + item.bk_biz_name + '</option>')
+                    })
+                } else {
+                    alert(res.message);
+                }
+            })
+        }
+
+        search_business();
+
+        // 异步请求后台数据
+        $.ajax({
+            url: 'https://magicbox.bk.tencent.com/static_api/v3/components/table7/data.json',
+            type: 'GET',
+            success: function (res) {
+
+            }
+        });
+    });
+</script>
 </%block>
 
