--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
                       contactus = 'king-navbar-active'
                   %>
                   <li class="${home}"><a href="${SITE_URL}"><span>首页</span></a></li>
-                  <li class="${dev_guide}"><a href="${SITE_URL}dev-guide/"><span>开发指引</span></a></li>
+                  <li class="${dev_guide}"><a href="${SITE_URL}dev-guide/"><span>主机状态</span></a></li>
                   <li class="${contactus}"><a href="${SITE_URL}contactus/"><span>联系我们</span></a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
