--- a/templates/home_application/dev_guide.html
+++ b/templates/home_application/dev_guide.html
@@ -1,79 +1,195 @@
 <%inherit file="/base.html"/>
 
-<%block name="content">
-<div class="page_index">
-	<!-- banner start -->
-	<div class="getheadimg-box">
-		<p class="guide-banner-title">开发指引</p>
-		<p class="guide-banner-word">了解蓝鲸开发框架，从这里开始</p>
+<!-- 若您需要使用Kendo UI Professional，请联系版权人获得合法的授权或许可。 -->
+<!-- Bootstrap css -->
+<link href="https://magicbox.bk.tencent.com/static_api/v3/assets/bootstrap-3.3.4/css/bootstrap.min.css"
+      rel="stylesheet">
+<!-- kendo ui css -->
+<link href="https://magicbox.bk.tencent.com/static_api/v3/assets/kendoui-2015.2.624/styles/kendo.common.min.css"
+      rel="stylesheet">
+<link href="https://magicbox.bk.tencent.com/static_api/v3/assets/kendoui-2015.2.624/styles/kendo.default.min.css"
+      rel="stylesheet">
+<!-- font-awesome -->
+<link href="https://magicbox.bk.tencent.com/static_api/v3/assets/fontawesome/css/font-awesome.css" rel="stylesheet">
+<!--蓝鲸提供的公用样式库 -->
+<link href="https://magicbox.bk.tencent.com/static_api/v3/bk/css/bk.css" rel="stylesheet">
+<link href="https://magicbox.bk.tencent.com/static_api/v3/bk/css/bk_pack.css" rel="stylesheet">
+<!-- 如果要使用Bootstrap的js插件，必须先调入jQuery -->
+<script src="https://magicbox.bk.tencent.com/static_api/v3/assets/js/jquery-1.10.2.min.js"></script>
+<!-- 包括所有bootstrap的js插件或者可以根据需要使用的js插件调用　-->
+<script src="https://magicbox.bk.tencent.com/static_api/v3/assets/echarts-2.0/echarts-all.js"></script>
+<script src="https://magicbox.bk.tencent.com/static_api/v3/assets/bootstrap-3.3.4/js/bootstrap.min.js"></script>
+<!-- 包括所有kendoui的js插件或者可以根据需要使用的js插件调用　-->
+<script src="https://magicbox.bk.tencent.com/static_api/v3/assets/kendoui-2015.2.624/js/kendo.all.min.js"></script>
+<script src="https://magicbox.bk.tencent.com/static_api/v3/assets/echarts-2.0/echarts-all.js"></script>
+<script src="https://magicbox.bk.tencent.com/static_api/v3/bk/js/bk.js"></script>
+<!-- 数据埋点统计 -->
+<script src="http://magicbox.bk.tencent.com/static_api/analysis.js"></script>
+<!-- 以下两个插件用于在IE8以及以下版本浏览器支持HTML5元素和媒体查询，如果不需要用可以移除 -->
+<!--[if lt IE 9]><script src="https://magicbox.bk.tencent.com/static_api/v3/assets/js/html5shiv.min.js"></script><script src="https://magicbox.bk.tencent.com/static_api/v3/assets/js/respond.min.js"></script><![endif]-->
 
-	</div>
-	<!-- banner end -->
-	<div class="container">
-	<ul class="king-step3 king-step-primary">
-	    <li class="process-doing mt50 clearfix">
-	    	<span class="outer-circle"></span>
-	        <div class="step-num step-num-top-line">1</div>
-	        <div class="step-text step-text-top">
-	            <h4>本地开发环境安装</h4>
-		        <div class="mt10 mb20 wm lh2">
-					1.本地环境搭建镜像
-					<a href="http://bkopen-10032816.file.myqcloud.com/paas/bk-django1.8-u2.box" target="_blank">点击下载</a>
-					<br>
-					2.使用文档
-					<a href="http://bkopen-10032816.file.myqcloud.com/paas/蓝鲸智云统一开发环境搭建指南.docx" target="_blank">点击下载</a>
-					<br>
-					<p class="text-notice">注意：应用测试、正式部署时会自动安装运行环境，并部署应用
-					</p>
-				</div>
-	        </div>
-	    </li>
-	    <li class="process-doing clearfix">
-	    	<span class="outer-circle"></span>
-	        <div class="step-num">2</div>
-	        <div class="step-text">
-	            <h4>开发项目</h4>
-	            <div class="mt10 mb20 wm lh2">
-					<strong>1.配置修改</strong><br>
-					（1）conf/default.py 文件：APP_ID \ APP_TOKEN （蓝鲸智云开发者中心 -&gt; 点击应用ID -&gt; 基本信息 中可以查看到这两个值的信息）<br>
-					（2）conf/default.py 文件：BK_PAAS_HOST（蓝鲸智云开发者中心的域名，形如：http://paas.bking.com）<br>
-					（3）conf/settings_development.py 文件：DATABASES（请创建本地开发数据库，并修改配置信息）<br>
-					（4）conf/settings_testing.py 文件：DATABASES（请创建测试数据库，并修改配置信息）<br>
-					（5）conf/settings_production.py 文件：DATABASES（请创建正式数据库，并修改配置信息）<br>
-					<p class="text-notice">注意：测试环境 和 正式环境 的数据库需要对 AppServer 授权</p>
-					<br>
-					<strong>2.celery 配置</strong><br>
-					若需要使用 celery，请修改以下配置：（<a href="http://bkopen-10032816.file.myqcloud.com/paas/celery_packages.zip">点击下载 celery 开发指引</a>）<br>
-					（1）conf/default.py 文件：IS_USE_CELERY 的值设置为: <span class="text-notice">True</span><br>
-					（2）conf/default.py 文件：BROKER_URL_DEV（请创建本地开发的 celery消息队列，并修改配置信息，推荐使用 RabbitMQ）<br>
-					（3）conf/default.py 文件：CELERY_IMPORTS（添加celery任务模块）<br>
-					<strong>3.数据库操作</strong><br>
-					Django1.8 Migration的使用方法如下:<br>
-					（1）执行 manage.py migrate（Django默认表创建）。<br>
-					（2）执行 manage.py startapp yourappname、添加yourappname到conf/default.py文件的"INSTALLED_APPS_CUSTOM"变量中。<br>
-					（3）在Application的models.py中建立数据库模型，执行manage.py makemigrations yourappname。<br>
-					（4）执行manage.py migrate yourappname。<br>
-				</div>
-	        </div>
-	    </li>
-	    <li class="process-doing clearfix">
-	    <span class="outer-circle"></span>
-	        <div class="step-num">3</div>
-	        <div class="step-text-button-line">
-	            <h4>部署项目</h4>
-	            <div class="mt10 mb20 wm lh2">
-					<strong>通过蓝鲸智云开发者中心提供的“测试部署”、“正式部署”服务将应用部署到测试\正式环境中。</strong><br>
-					操作入口：蓝鲸智云开发者中心 -&gt; 点击应用名称 -&gt; 应用部署。 <br>
-					（1）测试部署：将应用代码在测试环境上进行部署，部署成功后就可以在测试环境中使用您的应用。<br>
-					（2）正式部署：将应用代码在正式环境上进行部署，部署成功后就可以在正式环境中使用您的应用。<br>
-					（3）下架操作：系统将应用代码从您选择的环境上撤销部署，届时用户将无法访问该应用，但是该应用的数据库依然保留。<br>
-				</div>
-	        </div>
-	    </li>
-	</ul>
-	</div>
+
+<%block name="content">
+<div class="king-page-box">
+    <div class="king-container clearfix">
+        <div class="form-group clearfix ">
+            <label class="col-sm-3 control-label bk-lh30 pt0">请选择业务：</label>
+            <div class="col-sm-9">
+                <select name="" id="select_app" class="form-control bk-valign-top">
+                </select>
+            </div>
+        </div>
+        <div class="form-group has-feedback clearfix ">
+            <label class="control-label col-sm-3 pt0" for="introduction">请输入主机IP：</label>
+            <div class="col-sm-9">
+                <textarea id="ip_list_filter" class="form-control" rows="4" placeholder="提示信息"></textarea>
+            </div>
+        </div>
+        <div class="form-group clearfix">
+            <div class="col-sm-9 col-sm-offset-3">
+                <button type="button" id="btn_search" class="king-btn mr10  king-success">查询</button>
+            </div>
+        </div>
+
+        <div id="chars_container">
+
+        </div>
+
+        <!-- 设置面板End -->
+
+        <template id="chart_tmp">
+            <div style="float: left;margin-left: 20px;" class="king-page-box">
+                <div class="king-container clearfix">
+                    <div style="height: 400px; position: relative;width:900px;" id="#id#"
+                         class="king-chart-box chart-line  k-chart" data-role="chart"></div>
+                </div>
+            </div>
+        </template>
+
+    </div>
 </div>
+<script>
+    $(function () {
+
+        function renderTpl(str, cfg) {
+            var re = /(#(.+?)#)/g;
+
+            return str.replace(re, function () {
+                var val = cfg[arguments[2]] + '';
+                if (typeof val == 'undefined') {
+                    val = '';
+                }
+                return val;
+            });
+        }
+
+        // 创建图表
+        function createKendoLineChart(conf) {
+            $(conf.selector).kendoChart({
+                transitions: false,
+                legend: {
+                    position: "bottom"
+                },
+                colors: ['yellow'],
+                theme: 'bootstrap',
+                seriesDefaults: {
+                    type: 'line',
+                    style: "smooth",
+                    markers: {
+                        visible: false
+                    }
+                },
+                series: conf.data.series,
+                categoryAxis: {
+                    majorGridLines: {
+                        visible: false
+                    },
+                    categories: conf.data.categories,
+                    labels: {
+                        rotation: "auto"
+                    }
+                },
+                tooltip: {
+                    visible: true,
+                    template: "#= category # #= value #"
+                }
+            });
+            //重新绘制
+            $(window).on('resize', function () {
+                var chart = $(conf.selector).data("kendoChart");
+                chart.redraw();
+            });
+        }
+
+        function initKendoLineChart(conf) {
+            // 异步请求后台数据
+            $.ajax({
+                url: conf.url,
+                type: 'GET',
+                dataType: conf.dataType,
+                success: function (res) {
+                    //获取数据成功
+                    if (res.result) {
+                        var data = {
+                            series: res.data.series,
+                            categories: res.data.categories
+                        };
+                        createKendoLineChart({
+                            selector: conf.container, // 图表容器
+                            data: data // 图表数据
+                        });
+                    }
+                }
+            });
+        }
+
+
+        $("#btn_search").click(function () {
+            var app_id = $("#select_app").find("option:selected").val();
+            var ip_list_f = $("#ip_list_filter").val();
+            var html = $("#chart_tmp").html();
+            $.post("${SITE_URL}api/search_m_host/?business_id=" + app_id, ip_list_f, function (res) {
+                if (res.result) {
+                    $("#chars_container").empty();
+
+                    if(res.data.length == 0){
+                        $("#chars_container").text("无查询结果！");
+                        return
+                    }
+
+
+                    res.data.forEach(function (item) {
+                        var n_html = renderTpl(html, {id: item.id})
+                        $("#chars_container").append(n_html);
+                        initKendoLineChart({
+                            url: '${SITE_URL}api/get_monitor_data/?business_id=' + item.biz_id + '&ip=' + item.ip,
+                            dataType: 'json',
+                            container: '#' + item.id
+                        });
+                    })
+                } else {
+                    alert(res.message);
+                }
+            })
+
+        })
+
+        var search_business = function () {
+            $.get("${SITE_URL}api/search_business/", function (res) {
+                if (res.result) {
+                    res.data.info.forEach(function (item) {
+                        $("#select_app").append('<option value="' + item.bk_biz_id + '">' + item.bk_biz_name + '</option>')
+                    })
+                } else {
+                    alert(res.message);
+                }
+            })
+        }
+
+        search_business();
+
+
+    });
+</script>
 </%block>
-<%block name='footerline'>
-    <hr class="guide-cutting-line">
-</%block>
+
